# pycorrectmatch

./: .gitignore  README.md  juliapkg.json  pyproject.toml  setup.py
.github/workflows/: publish.yml  release.yml  test.yml
correctmatch/: __init__.py
demo/: adults.csv  demonstration-notebook.ipynb
tests/: conftest.py  test_correctmatch.py
