[project]
name = "correctmatch"
version = "1.4.1"
description = "Python wrapper for the Julia package CorrectMatch.jl"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "juliacall>=0.9.0",
    "numpy>=2.0",
    "pandas>=2.3.0",
]

[project.urls]
homepage = "https://github.com/computationalprivacy/pycorrectmatch"

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-lazy-fixtures>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
